# AD1-tools

./: .markdownlint.json  APP_README.md  FFX.code-workspace  README.md  configure.ac  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.solid.json
AD1Tools/: Makefile.am
AD1Tools/libad1/: libad1_extract.c  libad1_extract.h  libad1_printer.c  libad1_reader.c
CORE-FFX_AssetKit_Tauri_macOS_Windows/: README.txt
CORE-FFX_AssetKit_Tauri_macOS_Windows/macos/: core-ffx.icns
src/: App.css  App.css.bak  App.tsx  AppRouter.css  AppRouter.tsx  E01V3Test.css  E01V3Test.tsx  RawTest.tsx  index.css  index.tsx  types.ts  utils.ts
src-tauri/: 7zip.md  AD1.md  AXIOM_DATABASE_BIBLE.md  Archive_Reference.md   Cargo.toml  FFX_PROJECT_FORMAT.md  FFX_REPORT_TEMPLATES.md  L01.md  REFACTORING_NOTES.md  ewfHex.md  tauri.conf.json  zlib_compression.md
src-tauri/examples/: bench_hash.rs  bench_verify.rs  test_ad1_verify.rs  test_e01.rs  test_e01_read.rs  test_e01_simple.rs  test_e01_v3.rs  test_e01_v3_baseoffset.rs  test_parser.rs  test_report.rs  test_viewer.rs
src-tauri/src/: ad1.rs  archive.rs  containers.rs  database.rs  e01.rs  ewf.rs  l01.rs  lib.rs  logging.rs  main.rs  project.rs  raw.rs  ufed.rs  viewer.rs
src-tauri/src/ad1/: mod.rs  operations.rs  parser.rs  types.rs  utils.rs
src-tauri/src/archive/: detection.rs  mod.rs  segments.rs  sevenz.rs  types.rs  zip.rs
src-tauri/src/common/: audit.rs  binary.rs  entropy.rs  hash.rs  hex.rs  io_pool.rs  magic.rs  mod.rs  path_security.rs  segments.rs
src-tauri/src/containers/: companion.rs  mod.rs  operations.rs  scanning.rs  segments.rs  types.rs
src-tauri/src/ewf/: cache.rs  handle.rs  mod.rs  operations.rs  parser.rs  types.rs
src-tauri/src/processed/: axiom.rs  commands.rs  detection.rs  mod.rs  types.rs
src-tauri/src/report/: ai.rs  commands.rs  docx.rs  error.rs  mod.rs  pdf.rs  template.rs  types.rs  typst_gen.rs
src-tauri/src/report/templates/: report.md
src-tauri/src/ufed/: archive_scan.rs  collection.rs  detection.rs  mod.rs  parsing.rs  types.rs
src-tauri/test_output/: test_report.md
src/components/: DetailPanel.tsx  DetailPanelContent.tsx  FilePanel.tsx  FileRow.tsx  HexViewer.tsx  MetadataPanel.tsx  ProcessedDatabasePanel.tsx  ProcessedDetailPanel.tsx  ProgressModal.tsx  ProjectSetupWizard.tsx  StatusBar.tsx  TabBar.tsx  TabbedDetailPanel.tsx  TextViewer.tsx  Toolbar.tsx  TreePanel.tsx  index.ts
src/components/report/: ReportWizard.tsx  index.ts
src/extensions/: README.md  registry.ts
src/extensions/examples/: timeline-viewer.tsx
src/hooks/: index.ts  useDatabase.ts  useFileManager.ts  useHashManager.ts  useProcessedDatabases.ts  useProject.ts
src/report/: api.ts  generator.ts  index.ts  types.ts
src/types/: processed.ts  project.ts
src/utils/: processed.ts
ui-template/: DESIGN_DOCUMENT.md  README.md  template-App.tsx  template-components.tsx  template-hooks.ts  template-types.ts  template-utils.ts  template.css
