[package]
name = "liblfx"
version = "0.1.0"
description = "AD1 logical image tool"
authors = ["you"]
edition = "2021"

[lib]
name = "liblfx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = true }
filetime = "0.2"
flate2 = "1"
hex = "0.4"
md5 = "0.7"
sha1 = "0.10"
