[package]
name = "liblfx"
version = "0.1.0"
description = "AD1 logical image tool"
authors = ["you"]
edition = "2021"

[lib]
name = "liblfx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = true }
filetime = "0.2"
flate2 = { version = "1", features = ["zlib-ng"] }  # Use zlib-ng for faster decompression (streaming is more efficient than libdeflate)
hex = "0.4"
md5 = "0.7"
sha1 = { version = "0.10", features = ["asm"] }  # Enable SHA-NI hardware acceleration if available
sha2 = { version = "0.10", features = ["asm"] }  # SHA-256 with hardware acceleration
blake3 = { version = "1.5", features = ["rayon"] }  # Extremely fast, parallelizable hash with multi-threaded support
blake2 = "0.10"  # Faster than SHA-2
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }  # Non-crypto but extremely fast
crc32fast = "1.4"
rayon = "1.10"
num_cpus = "1.16"
regex = "1"  # For parsing companion log files

[profile.release]
opt-level = 3           # Maximum optimizations
lto = "thin"            # Link-time optimization (thin is faster to compile than "fat")
codegen-units = 1       # Better optimization at the cost of compile time
strip = true            # Strip symbols
panic = "abort"         # Smaller binary, faster panic
